--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ services:
 
 before_install:
   - docker build -t react_frontend -f Dockerfile.dev .
+
+script:
+  - docker run react_frontend npm run test -- --coverage
